--- a/style.css
+++ b/style.css
@@ -40,8 +40,11 @@ header .menu ul li a{
 }
 header .menu ul li a:hover{
     color: tomato;
+    font-weight: bold;   
+}
+header .menu ul li a.active{
+    color: tomato;
     font-weight: bold;
-    
 }
 header .log{
     padding: 0 60px ; 
@@ -160,7 +163,8 @@ header .log{
     background-color: tomato;   
 }
 .main-image img{
-    filter: drop-shadow(-3px 0px 15px rgba(34, 34, 34, 0.5));   
+    filter: drop-shadow(-3px 0px 15px rgba(34, 34, 34, 0.5)); 
+    height: 100%;  
 }
 
 /* Below the main page starts here */
@@ -349,3 +353,202 @@ footer #copyright{
     padding-bottom: 0px;
     letter-spacing: 3px;
 }
+
+
+
+
+
+
+/* footerfor all other pages */
+.footer{
+    height: 42vh;
+    background: rgb(61, 61, 61);
+    margin-top: 0px;
+}
+footer .about{
+    text-align: center;
+    padding-top: 20px;
+}
+footer .about a{
+    text-decoration: none;
+    color: white;
+}
+footer .about a h4{
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    transition: 0.3s ease;
+}
+footer .about a h4:hover{
+    color: tomato;
+}
+footer .about a h4 i{
+    margin-right: 10px;
+}
+
+footer .about-content{
+    display: flex;
+    padding: 30px;
+    justify-content: space-between;
+}
+footer .about-content p{
+    color: white;
+    width: 400px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+}
+footer .about-content .icon{
+    display: flex;
+    padding-right: 50px;
+}
+footer .about-content .icon i{
+    padding: 20px;
+    color: white;
+    filter: drop-shadow(0 5px 15px #000000);
+}
+footer .about-content .icon i:hover{
+    color: tomato;
+}
+footer #copyright{
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    padding-bottom: 0px;
+    letter-spacing: 3px;
+}
+
+
+
+/* Intro page design starts from here */
+.main-intro{
+    box-sizing: border-box;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+}
+.main-intro .box-intro{
+    height: 80vh;
+    width: 70%;
+    background-color: tomato;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
+    color: white;
+}
+.main-intro .img-intro{
+    height: 350px;
+    width: 350px;
+    background-color: white;
+    margin-top: 100px;
+    margin-left: -50px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+}
+.main-intro .img-intro img{
+    height: 100%;
+    width: 100%;
+}
+.main-intro .box-intro .intext{
+    text-align: center;
+    margin: 20px 150px;
+}
+.main-intro .box-intro .intext h2{
+    font-family: 'Oswald', sans-serif;
+    font-size: 30px;
+    padding-top: 40px;
+}
+.main-intro .box-intro .intext h4{
+    font-family: 'Fira Sans', sans-serif;
+    padding-bottom: 10px;
+    font-size: 14px;
+    font-style: normal;
+    color: black;
+}
+.main-intro .box-intro .intext p{
+    text-align: left;
+    padding-bottom: 10px;
+}
+.main-intro .box-intro .icon-intro{
+    color: white;
+    margin-top: 80px;
+    margin-left: 320px;
+}
+.main-intro .box-intro .icon-intro i{
+    padding: 10px;
+    cursor: pointer;
+}
+.main-intro .box-intro .icon-intro i:hover{
+    color: black;
+}
+footer .arrows{
+    direction: rtl;
+   padding-right: 15px;
+
+}
+footer .arrows a{
+    color: white;
+}
+footer .arrows a i{
+    padding-right: 10px;
+    transition: 0.2s ease;
+}
+footer .arrows a i:hover{
+    color: tomato;
+}
+
+
+
+/* serivice page design starts here */
+
+.container .services{
+    background-color: rgb(212, 81, 58);
+    height: 100vh;
+    width: 100%;  
+    display: block; 
+    text-align: center;
+}
+.container .services h1{
+    color: white;
+    padding-top: 40px;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 18px;
+}
+.container .services p{
+    color: white;
+    font-size: 12px;
+    padding-top: 2px; 
+}
+.container .services hr{
+    width: 20%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+}
+.container .services .service-boxes{
+    display: flex;
+    margin: 30px 80px;
+    justify-content: center;
+}
+.container .services .service-boxes .services-box1{
+    height: 300px;
+    width: 300px;
+    margin: 0px 20px;
+    margin-top: 30px;
+    background: rgb(0, 0, 0, 0.2);  
+    color: white;
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+.container .services .service-boxes .services-box1:hover{
+    background-color: rgb(0, 0, 0, 0.4);
+}
+.container .services .service-boxes .services-box1 i{
+    margin-top: 90px;  
+}
+.container .services .service-boxes .services-box1 h3{
+    padding-top: 15px;
+}
+.container .services .service-boxes .services-box1 p{
+    padding: 20px 40px;
+    text-align: center;
+    line-height: 1.5;
+}
+
